--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -11,12 +11,17 @@
 	<li class="navitem"><a href="/programming/java/">Java</a></li>
 	<div class="dropdown">
     <button class="dropbtn">Dropdown 
+      <i class="fas fa-caret-down"></i>
+    </button>
+    <div class="dropdown">
+    <button class="dropbtn">More
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="#">Link 1</a>
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
+    &#x25BC; dropdown symbol
+      <a href="/games">Coding Games</a><hr>
+			<a href="/🐒🐒🐒🐒">🐒🐒🐒🐒</a><hr>
+			<p style="text-align:center;">More Coming Soon!</p>
     </div>
   </div>
 	<li class="navitem"><a onclick="switchDark()" id="toggledarklight">Toggle Dark</a></li><!-- 
