--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -165,16 +165,13 @@ footer a.footer-link:hover {
 }
 
 .dropdown:hover .dropbtn {
-/*   color: #C4A484; */
-/*  color: #145261; */
-  color: lightseagreen;
+  color: orange;
   cursor: pointer;
 }
 
 .dropdown-content {
   display: none;
   position: absolute;
-/*   background-color: #f9f9f9; */
   background-color: #eee;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
