--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,6 +9,14 @@
 	<li class="navitem"><a href="/programming/golang/">Go</a></li>
   	<li class="navitem"><a href="/programming/cpp/">C++</a></li>
 	<li class="navitem"><a href="/programming/java/">Java</a></li>
+	<li class="dropdown">
+        <a href="#" class="dropbtn"> Home </a>
+        <div class="dropdown-content">
+            <a href="#">Home sub 1</a><br>
+            <a href="#">Home sub 2</a><br>
+            <a href="#">Home sub 3</a>
+        </div>    
+    </li>
 	<div class="dropdown">
 		<button class="dropbtn">More
 			<i class="fa fa-caret-down"></i>
