--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,8 +67,8 @@ ul.navbar {
   padding: 0;
   overflow: hidden;
   background-color: #5b241c;
-  position: -webkit-sticky; /* Safari */
-  position: sticky;
+/*  position: -webkit-sticky;  Safari 
+  position: sticky;*/
   top: 0;
 }
 
