--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,3 @@
-body {
-  transition: 0.5s;
-}
-
 #menu-wrapper {
     height: 10vh;
 }
@@ -121,6 +117,8 @@ code {
 
 body {
     scroll-behavior: smooth;
+    transition: 0.5s;
+    font-family: sans-serif;
 }
 
 samp {
