Add Go slices and arrays tutorials to list

--- a/_layouts/golang.html
+++ b/_layouts/golang.html
@@ -17,6 +17,8 @@
               <a href="/programming/golang/functions/"><li>Functions</li></a>
               <a href="/programming/golang/if-else/"><li>If/Else</li></a>
               <a href="/programming/golang/switch/"><li>Switch</li></a>
+              <a href="/programming/golang/arrays/"><li>Arrays</li></a>
+              <a href="/programming/golang/slices/"><li>Slices</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
