Add Go structs tutorial to list

--- a/_layouts/golang.html
+++ b/_layouts/golang.html
@@ -19,6 +19,7 @@
               <a href="/programming/golang/switch/"><li>Switch</li></a>
               <a href="/programming/golang/arrays/"><li>Arrays</li></a>
               <a href="/programming/golang/slices/"><li>Slices</li></a>
+              <a href="/programming/golang/structs/"><li>Structs</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
