--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,7 +118,7 @@ code {
 body {
     scroll-behavior: smooth;
     transition: 0.5s;
-    font-family: sans-serif;
+    font-family: "Segoe UI", Arial, sans-serif;
 }
 
 samp {
