--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<ul class="navbar">
+<!-- <ul class="navbar">
 	<li class="navitem"><b><a href="/">Learnmonkey</a></b></li>
 	<li class="navitem"><a href="/tutorial-index/">Tutorials</a></li>
 	<li class="navitem"><a href="/about">About</a></li>
@@ -28,6 +28,22 @@
 			<p style="text-align:center;">More Coming Soon!</p>
 		</div>
 	</div>
-	<li class="navitem"><a onclick="switchDark()" id="toggledarklight">Toggle Dark</a></li><!-- 
-	<li class="navitem"><a onclick="switchLight()" id="toggledarklight2">Toggle Light</a></li> -->
+	<li class="navitem"><a onclick="switchDark()" id="toggledarklight">Toggle Dark</a></li>
+	<li class="navitem"><a onclick="switchLight()" id="toggledarklight2">Toggle Light</a></li>
 </ul>
+ -->
+ <nav class="navbar">
+			<div class="brand-title">Brand Name</div>
+			<a class="toggle-button">
+				<span class="bar"></span>
+				<span class="bar"></span>
+				<span class="bar"></span>
+			</a>
+			<div class="navbar-links">
+				<ul>
+					<li><a href="#">Home</a></li>
+					<li><a href="#">About</a></li>
+					<li><a href="#">Contact</a></li>
+				</ul>
+			</div>
+		</nav>
