--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -41,9 +41,16 @@
  	</a>
  	<div class="navbar-links">
  		<ul>
- 			<li><a href="#">Home</a></li>
- 			<li><a href="#">About</a></li>
- 			<li><a href="#">Contact</a></li>
+ 			<li><a href="/tutorial-index/">Tutorials</a></li>
+ 			<li><a href="/about">About</a></li>
+ 			<li><a href="/programming/python/">Python</a></li>
+ 			<li><a href="/programming/html/">HTML</a></li>
+ 			<li><a href="/programming/css/">CSS</a></li>
+ 			<li><a href="/programming/javascript/">JavaScript</a></li>
+ 			<li><a href="/programming/golang/">Go</a></li>
+ 			<li><a href="/programming/cpp/">C++</a></li>
+ 			<li><a href="/programming/java/">Java</a></li>
+ 			<li><a onclick="switchDark()" id="toggledarklight">Toggle Dark</a></li>
  		</ul>
  	</div>
  </nav>
