add old navbar links

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -33,7 +33,7 @@
 </ul>
  -->
 <nav class="navbar">
- 	<div class="brand-title">Learnmonkey</div>
+ 	<div class="brand-title"><a href="/" style="text-decoration:none;color:white;">Learnmonkey</a></div>
  	<a class="toggle-button">
  		<span class="bar"></span>
  		<span class="bar"></span>
