--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,7 +122,7 @@ code {
 body {
     scroll-behavior: smooth;
     transition: 0.5s;
-    font-family: "Segoe UI", Arial, sans-serif;
+    font-family: "Segoe UI", sans-serif;
     margin: 0;
     padding: 0;
 }
