--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -44,6 +44,14 @@
  			<li><a href="/tutorial-index/">Tutorials</a></li>
  			<li><a href="/about">About</a></li>
  			<li><a href="/programming/python/">Python</a></li>
+ 			<li class="dropdown">
+ 				<a href="#" class="dropbtn">Programming</a>
+ 				<div class="dropdown-content">
+ 					<a href="#">page</a><br>
+ 					<a href="#">also page</a><br>
+ 					<a href="#">another page</a>
+ 				</div>
+ 			</li>
  			<li><a href="/programming/html/">HTML</a></li>
  			<li><a href="/programming/css/">CSS</a></li>
  			<li><a href="/programming/javascript/">JavaScript</a></li>
