test new navbar

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -32,7 +32,7 @@
 	<li class="navitem"><a onclick="switchLight()" id="toggledarklight2">Toggle Light</a></li>
 </ul>
  -->
-<nav class="navbar">
+<!-- <nav class="navbar">
  	<div class="brand-title"><a href="/" style="text-decoration:none;color:white;">Learnmonkey</a></div>
  	<a class="toggle-button">
  		<span class="bar"></span>
@@ -61,4 +61,28 @@
  			<li><a onclick="switchDark()" id="toggledarklight">Toggle Dark</a></li>
  		</ul>
  	</div>
- </nav>
+ </nav> -->
+
+ <div class="topnav" id="myTopnav">
+<a href="/" class="brand-title"><b style="">Learnmonkey</b></a>
+  <div class="dropdown">
+    <button class="dropbtn"><a href="/math/" style="font-weight:400;">Math&#x25BC</a>
+    </button>
+    <div class="dropdown-content">
+      <a href="#">Link 1</a>
+      <a href="#">Link 2</a>
+      <a href="#">Link 3</a>
+    </div>
+  </div>
+  <div class="dropdown">
+    <button class="dropbtn"><a href="/programming/" style="font-weight:400;">Programming&#x25BC</a>
+    </button>
+    <div class="dropdown-content">
+      <a href="#">Link 1</a>
+      <a href="#">Link 2</a>
+      <a href="#">Link 3</a>
+    </div>
+  </div> 
+  <!--<a href="#about">About</a>-->
+  <a class="small-nav-open icon" onclick="openSmallNav()">&#9776;</a>
+</div>
