--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,142 @@
   box-sizing: border-box;
 }
 
+.topnav {
+  overflow: hidden;
+  background-color: #5b241c;
+  display: flex;
+  float: center;
+  /*width: 100%;
+  position: absolute;
+  top: 0px;*/
+  /*justify-content: space-between;*/
+}
+
+.topnav a {
+  float: right;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  /*font-size: 1.5em;*/
+}
+
+.topnav .icon {
+  display: none;
+}
+
+.icon {
+  position: absolute;
+  top: 0rem;
+  right: 0.3rem;
+}
+
+.dropdown {
+  float: right;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  font-size: 1em;
+  font-weight: bold;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.dropdown .dropbtn:hover {
+  cursor: pointer;
+}
+
+.dropdown-content {
+  font-size: 1.1em;
+  display: none;
+  /*opacity: 0;*/
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  /*transition: 0.3s;*/
+  /*pointer-events: none;*/
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.topnav a:hover, .dropdown:hover .dropbtn {
+  color: orange;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.dropdown .dropbtn a {
+  font-size: 1.5em;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.topnav a.brand-title {
+  font-size: 2em;
+}
+
+.small-nav-open {
+  font-size: 30px;
+}
+
+.small-nav-open:hover {
+  cursor: pointer;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child), .dropdown .dropbtn {
+    display: none;
+  }
+  .topnav a.icon {
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .topnav.responsive .dropdown {float: none;}
+  .topnav.responsive .dropdown-content {position: relative;}
+  .topnav.responsive .dropdown .dropbtn {
+    display: block;
+    width: 100%;
+    text-align: left;
+  }
+  .topnav {
+    flex-direction: column;
+    /*justify-content: space-between;*/
+  }
+}
 #menu-wrapper {
     height: 10vh;
 }
@@ -182,7 +318,7 @@ li.dropdown a:hover {
   display: block;
 }*/
 
-.navbar {
+/*.navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -235,7 +371,7 @@ li.dropdown a:hover {
 
 /* @keyframes toggle-button-spin {
   100% {rotate(360deg);}
-} */
+} 
 
 .toggle-button .bar {
   height: 3px;
@@ -284,11 +420,11 @@ a {
 a:hover {
   color: darkblue;
 }
-
+*/
 img {
   height: 200px;
 }
-
+/*
 .dropdown {
   float: left;
   overflow: hidden;
@@ -310,9 +446,9 @@ img {
 .dropdown-content {
   display: none;
   position: absolute;
-/*   background-color: #f9f9f9; */
+/*   background-color: #f9f9f9; 
   background-color: #eee;
   min-width: 100px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
-}
+}*/
