--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -66,6 +66,19 @@
  <div class="topnav" id="myTopnav">
 <a href="/" class="brand-title"><b style="">Learnmonkey</b></a>
   <div class="dropdown">
+    <button class="dropbtn"><a href="/programming/" style="font-weight:400;">Programming&#x25BC</a>
+    </button>
+    <div class="dropdown-content">
+    	<a href="/programming/html/">HTML</a>
+    	<a href="/programming/css/">CSS</a></li>
+    	<a href="/programming/javascript/">JavaScript</a>
+    	<a href="/programming/golang/">Go</a>
+    	<a href="/programming/cpp/">C++</a>
+    	<a href="/programming/java/">Java</a>
+    	<a onclick="switchDark()" id="toggledarklight">Toggle Dark</a>
+    </div>
+  </div>
+  <div class="dropdown">
     <button class="dropbtn"><a href="/math/" style="font-weight:400;">Math&#x25BC</a>
     </button>
     <div class="dropdown-content">
@@ -74,15 +87,7 @@
       <a href="#">Link 3</a>
     </div>
   </div>
-  <div class="dropdown">
-    <button class="dropbtn"><a href="/programming/" style="font-weight:400;">Programming&#x25BC</a>
-    </button>
-    <div class="dropdown-content">
-      <a href="#">Link 1</a>
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
-    </div>
-  </div> 
+  <a onclick="switchDark()" id="toggledarklight">Toggle Dark</a>
   <!--<a href="#about">About</a>-->
   <a class="small-nav-open icon" onclick="openSmallNav()">&#9776;</a>
 </div>
