test new navbar

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,6 +3,7 @@
         <a href="mailto:learnmonkey2@gmail.com" class="footer-link"><i class="fas fa-envelope footer-icon fa-2x"></i></a>
         <a target="_blank" href="https://github.com/learnmonkey/learnmonkey.github.io" class="footer-link"><i class="fab fa-github-square footer-icon fa-2x"></i></a>
         <a target="_blank" href="https://twitter.com/learn_monkey" class="footer-link"><i class="fab fa-twitter footer-icon fa-2x"></i></a>
+        <a href="/settings/" class="footer-link"><i class="fas fa-cog footer-icon fa-2x"></i></a>
     </div>
     <div id="footer-copyright">
         <p style="text-align: center;">&copy; 2022 Learnmonkey</p>
