--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,13 +10,13 @@
   	<li class="navitem"><a href="/programming/cpp/">C++</a></li>
 	<li class="navitem"><a href="/programming/java/">Java</a></li>
 	<li class="dropdown">
-        <a href="#" class="dropbtn"> Home </a>
-        <div class="dropdown-content">
-            <a href="#">Home sub 1</a><br>
-            <a href="#">Home sub 2</a><br>
-            <a href="#">Home sub 3</a>
-        </div>    
-    </li>
+		<a href="#" class="dropbtn"> Home </a>
+		<div class="dropdown-content">
+			<a href="#">Home sub 1</a><br>
+			<a href="#">Home sub 2</a><br>
+			<a href="#">Home sub 3</a>
+		</div>	
+	</li>
 	<div class="dropdown">
 		<button class="dropbtn">More
 			<i class="fa fa-caret-down"></i>
@@ -64,28 +64,29 @@
  </nav> -->
 
  <div class="topnav" id="myTopnav">
-<a href="/" class="brand-title"><b style="">Learnmonkey</b></a>
-  <div class="dropdown">
-    <button class="dropbtn"><a href="/programming/" style="font-weight:400;">Programming&#x25BC</a>
-    </button>
-    <div class="dropdown-content">
-    	<a href="/programming/html/">HTML</a>
-    	<a href="/programming/css/">CSS</a></li>
-    	<a href="/programming/javascript/">JavaScript</a>
-    	<a href="/programming/golang/">Go</a>
-    	<a href="/programming/cpp/">C++</a>
-    	<a href="/programming/java/">Java</a>
-    </div>
-  </div>
-  <div class="dropdown">
-    <button class="dropbtn"><a href="/math/" style="font-weight:400;">Math&#x25BC</a>
-    </button>
-    <div class="dropdown-content">
-      <a href="#">Link 1</a>
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
-    </div>
-  </div>
-  <!--<a href="#about">About</a>-->
-  <a class="small-nav-open icon" onclick="openSmallNav()">&#9776;</a>
+ 	<a href="/" class="brand-title"><b style="">Learnmonkey</b></a>
+ 	<div class="dropdown">
+ 		<button class="dropbtn"><a href="/programming/" style="font-weight:400;">Programming&#x25BC</a>
+ 		</button>
+ 		<div class="dropdown-content">
+			<a href="/programming/python/">Python</a>
+			<a href="/programming/golang/">Go</a>
+			<a href="/programming/html/">HTML</a>
+			<a href="/programming/css/">CSS</a></li>
+			<a href="/programming/javascript/">JavaScript</a>
+			<a href="/programming/cpp/">C++</a>
+			<a href="/programming/java/">Java</a>
+		</div>
+	</div>
+	<div class="dropdown">
+		<button class="dropbtn"><a href="/math/" style="font-weight:400;">Math&#x25BC</a>
+		</button>
+		<div class="dropdown-content">
+			<a href="#">Link 1</a>
+			<a href="#">Link 2</a>
+			<a href="#">Link 3</a>
+		</div>
+	</div>
+	<a href="/tutorial-index/">Tutorials</a>
+	<a class="small-nav-open icon" onclick="openSmallNav()">&#9776;</a>
 </div>
