navbar styling... again :|

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -87,6 +87,6 @@
 			<a href="#">Link 3</a>
 		</div>
 	</div>
-	<a href="/tutorial-index/">Tutorials</a>
+	<a href="/tutorial-index/" style="font-size: 1em;">Tutorials</a>
 	<a class="small-nav-open icon" onclick="openSmallNav()">&#9776;</a>
 </div>
