Add Go maps tutorial to list

--- a/_layouts/golang.html
+++ b/_layouts/golang.html
@@ -21,6 +21,7 @@
               <a href="/programming/golang/slices/"><li>Slices</li></a>
               <a href="/programming/golang/for-loop/"><li>For Loop</li></a>
               <a href="/programming/golang/structs/"><li>Structs</li></a>
+              <a href="/programming/golang/maps/"><li>Maps</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
