Add Git to navbar dropdown

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -76,6 +76,7 @@
 			<a href="/programming/javascript/">JavaScript</a>
 			<a href="/programming/cpp/">C++</a>
 			<a href="/programming/java/">Java</a>
+			<a href="/programming/git/">Git</a>
 		</div>
 	</div>
 	<div class="dropdown">
