--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
     <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"></script>
     <link rel="icon" type="image/x-icon" href="/images/logo.png">
     <link rel="stylesheet"
-      href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.4.0/styles/default.min.css">
+      href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.4.0/styles/vs.min.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.4.0/highlight.min.js"></script>
     <script>hljs.highlightAll();</script>
 </head>
