--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -88,6 +88,15 @@
 			<a href="#">Link 3</a>
 		</div>
 	</div>
+	<div class="dropdown">
+		<button class="dropbtn"><a href="/math/" style="font-weight:400;">More&#x25BC</a>
+		</button>
+		<div class="dropdown-content">
+			<a href="/tutorial-index/">Tutorials</a>
+			<a href="/settings/">Settings</a>
+			<a href="#">Link 3</a>
+		</div>
+	</div>
 	<a href="/tutorial-index/" style="font-size: 1.5em;">Tutorials</a>
 	<a class="small-nav-open icon" onclick="openSmallNav()">&#9776;</a>
 </div>
