--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -438,6 +438,11 @@ a:hover {
   text-decoration: underline;
 }
 
+a:visited {
+  text-decoration: none;
+  color: blue;
+}
+
 img {
   height: 200px;
 }
