--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -485,7 +485,7 @@ img {
   color: darkblue;
 }
 
-#tutorial-index-main ul li{
+/*#tutorial-index-main ul li{
   text-decoration: none;
   color: blue;
 }
@@ -493,4 +493,4 @@ img {
 #tutorial-index-main ul li:hover {
   text-decoration: underline;
   color: darkblue;
-}
+}*/
