--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -481,13 +481,10 @@ img {
 }
 
 #tutorial-index-main li:hover {
-  text-decoration: underline;
+  text-decoration: none;
   color: darkblue;
 }
 
-#tutorial-index-main li > ul > li:hover {
-  color: black;
-}
 
 /*#tutorial-index-main li li{
   text-decoration: none;
