--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -65,6 +65,7 @@
 
  <div class="topnav" id="myTopnav">
  	<a href="/" class="brand-title"><b style="">Learnmonkey</b></a>
+ 	<img src="/images/logo.png" style="height:60px;width:60px;" alt="Learnmonkey Logo">
  	<div class="dropdown">
  		<button class="dropbtn"><a href="/programming/" style="font-weight:400;">Programming&#x25BC</a>
  		</button>
