--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,5 +9,5 @@
         <p style="text-align: center;">&copy; 2022 Learnmonkey</p>
     </div>
 </footer>
-<a onclick="switchDark()" id="toggledarklight">Toggle Dark</a>
+<!-- <a onclick="switchDark()" id="toggledarklight">Toggle Dark</a> -->
 <script src="/assets/js/script.js"></script>
