--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,70 +1,5 @@
-<!-- <ul class="navbar">
-	<li class="navitem"><b><a href="/">Learnmonkey</a></b></li>
-	<li class="navitem"><a href="/tutorial-index/">Tutorials</a></li>
-	<li class="navitem"><a href="/about">About</a></li>
-	<li class="navitem"><a href="/programming/python/">Python</a></li>
-	<li class="navitem"><a href="/programming/html/">HTML</a></li>
-	<li class="navitem"><a href="/programming/css/">CSS</a></li>
-	<li class="navitem"><a href="/programming/javascript/">JavaScript</a></li>
-	<li class="navitem"><a href="/programming/golang/">Go</a></li>
-  	<li class="navitem"><a href="/programming/cpp/">C++</a></li>
-	<li class="navitem"><a href="/programming/java/">Java</a></li>
-	<li class="dropdown">
-		<a href="#" class="dropbtn"> Home </a>
-		<div class="dropdown-content">
-			<a href="#">Home sub 1</a><br>
-			<a href="#">Home sub 2</a><br>
-			<a href="#">Home sub 3</a>
-		</div>	
-	</li>
-	<div class="dropdown">
-		<button class="dropbtn">More
-			<i class="fa fa-caret-down"></i>
-		</button>
-		<div class="dropdown-content">
-		&#x25BC; dropdown symbol
-			<a href="/games">Coding Games</a><hr>
-			<a href="/🐒🐒🐒🐒">🐒🐒🐒🐒</a><hr>
-			<p style="text-align:center;">More Coming Soon!</p>
-		</div>
-	</div>
-	<li class="navitem"><a onclick="switchDark()" id="toggledarklight">Toggle Dark</a></li>
-	<li class="navitem"><a onclick="switchLight()" id="toggledarklight2">Toggle Light</a></li>
-</ul>
- -->
-<!-- <nav class="navbar">
- 	<div class="brand-title"><a href="/" style="text-decoration:none;color:white;">Learnmonkey</a></div>
- 	<a class="toggle-button">
- 		<span class="bar"></span>
- 		<span class="bar"></span>
- 		<span class="bar"></span>
- 	</a>
- 	<div class="navbar-links">
- 		<ul>
- 			<li><a href="/tutorial-index/">Tutorials</a></li>
- 			<li><a href="/about">About</a></li>
- 			<li><a href="/programming/python/">Python</a></li>
- 			<li class="dropdown">
- 				<a href="#" class="dropbtn">Programming</a>
- 				<div class="dropdown-content">
- 					<a href="#">page</a><br>
- 					<a href="#">also page</a><br>
- 					<a href="#">another page</a>
- 				</div>
- 			</li>
- 			<li><a href="/programming/html/">HTML</a></li>
- 			<li><a href="/programming/css/">CSS</a></li>
- 			<li><a href="/programming/javascript/">JavaScript</a></li>
- 			<li><a href="/programming/golang/">Go</a></li>
- 			<li><a href="/programming/cpp/">C++</a></li>
- 			<li><a href="/programming/java/">Java</a></li>
- 			<li><a onclick="switchDark()" id="toggledarklight">Toggle Dark</a></li>
- 		</ul>
- 	</div>
- </nav> -->
-
- <div class="topnav" id="myTopnav">
- 	<a href="/" class="brand-title"><b style="">Learnmonkey</b></a>
+<div class="topnav" id="myTopnav">
+ 	<a href="/" class="brand-title"><b>Learnmonkey</b></a>
  	<img src="/images/logo.png" style="height:80px;width:80px;" alt="Learnmonkey Logo">
  	<div class="dropdown">
  		<button class="dropbtn"><a href="/programming/" style="font-weight:400;">Programming&#x25BC</a>
@@ -95,7 +30,6 @@
 		<div class="dropdown-content">
 			<a href="/tutorial-index/">Tutorials</a>
 			<a href="/settings/">Settings</a>
-			<a href="#">Link 3</a>
 		</div>
 	</div>
 	<!-- <a href="/tutorial-index/" style="font-size: 1.5em;">Tutorials</a> -->
