finish intro to jquery

--- a/_layouts/jquery.html
+++ b/_layouts/jquery.html
@@ -5,7 +5,7 @@
         {%- include nav.html -%}
         <main>{{content}}</main>
         <ul id="tutorials-list">
-            <a href="/programming/jquery/"><li>Introduction to JQuery</li></a>
+            <a href="/programming/jquery/"><li>Introduction to jQuery</li></a>
       </ul>
         {%- include footer.html -%}
     </body>
