--- a/_layouts/jquery.html
+++ b/_layouts/jquery.html
@@ -6,6 +6,7 @@
         <main>{{content}}</main>
         <ul id="tutorials-list">
             <a href="/programming/jquery/"><li>Introduction to jQuery</li></a>
+            <a href="/programming/javascript/jquery/setup-jquery/"><li> Setting Up jQuery</li></a>
       </ul>
         {%- include footer.html -%}
     </body>
