--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,12 +10,9 @@
 			<a href="/programming/html/">HTML</a>
 			<a href="/programming/css/">CSS</a></li>
 			<a href="/programming/javascript/">JavaScript</a>
-			<a href="/programming/cpp/">C++</a>
-			<a href="/programming/java/">Java</a>
-			<a href="/programming/git/">Git</a>
 		</div>
 	</div>
-	<div class="dropdown">
+	<!--<div class="dropdown">
 		<button class="dropbtn"><a href="/math/" style="font-weight:400;">Math&#x25BC</a>
 		</button>
 		<div class="dropdown-content">
@@ -23,7 +20,7 @@
 			<a href="#">Link 2</a>
 			<a href="#">Link 3</a>
 		</div>
-	</div>
+	</div>-->
 	<div class="dropdown">
 		<button class="dropbtn"><a href="/math/" style="font-weight:400;">More&#x25BC</a>
 		</button>
