Work in progress alert

--- a/_layouts/css.html
+++ b/_layouts/css.html
@@ -3,12 +3,13 @@
     {%- include head.html -%}
     <body>
         {%- include nav.html -%}
+        {%- include wip-alert.html -%}
         <main>{{content}}</main>
         <ul id="tutorials-list">
             <a href="/programming/css/"><li>Introduction to CSS</li></a>
             <a href="/programming/css/setup-css/"><li>Setting Up CSS</li></a>
             <a href="/programming/css/how-css-works/"><li>How CSS Works</li></a>
-      </ul>
+        </ul>
         {%- include footer.html -%}
     </body>
 </html>
