--- a/_layouts/flask.html
+++ b/_layouts/flask.html
@@ -3,6 +3,7 @@
     {%- include head.html -%}
     <body>
         {%- include nav.html -%}
+        {%- include wip-alert.html -%}
         <main>{{content}}</main>
         <ul id="tutorials-list">
               <a href="/programming/python/flask/"><li>Introduction to Flask</li></a>
