--- a/_layouts/git.html
+++ b/_layouts/git.html
@@ -3,6 +3,7 @@
     {%- include head.html -%}
     <body>
         {%- include nav.html -%}
+        {%- include wip-alert.html -%}
         <main>{{content}}</main>
         <ul id="tutorials-list">
               <a href="/programming/git/"><li>Introduction to Git</li></a>
