--- a/_layouts/jekyll.html
+++ b/_layouts/jekyll.html
@@ -3,6 +3,7 @@
     {%- include head.html -%}
     <body>
         {%- include nav.html -%}
+        {%- include wip-alert.html -%}
         <main>{{content}}</main>
         <ul id="tutorials-list">
               <a href="/programming/jekyll/"><li>Introduction to Jekyll</li></a>
