--- a/_layouts/jquery.html
+++ b/_layouts/jquery.html
@@ -3,11 +3,12 @@
     {%- include head.html -%}
     <body>
         {%- include nav.html -%}
+        {%- include wip-alert.html -%}
         <main>{{content}}</main>
         <ul id="tutorials-list">
             <a href="/programming/jquery/"><li>Introduction to jQuery</li></a>
             <a href="/programming/javascript/jquery/setup-jquery/"><li> Setting Up jQuery</li></a>
-      </ul>
+        </ul>
         {%- include footer.html -%}
     </body>
 </html>
