--- a/_includes/wip-alert.html
+++ b/_includes/wip-alert.html
@@ -1,5 +1,5 @@
 <!-- alert than warns people that the tutorial is a work in progress -->
-<div class="alert alert-warning alert-dismissible">
-    <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-    <strong>Warning:</strong> The tutorial you are viewing is a work in progress.
+<div class="alert">
+    <span class="alert-close-button" onclick="this.parentElement.style.display='none';">&times;</span>
+    <strong>Warning: </strong> <p>The tutorial you are reading is a work in-progress</p>
 </div>
