Add tutorial to list

--- a/_layouts/golang.html
+++ b/_layouts/golang.html
@@ -23,6 +23,7 @@
               <a href="/programming/golang/whule-loop/"><li>While Loop</li></a>
               <a href="/programming/golang/structs/"><li>Structs</li></a>
               <a href="/programming/golang/maps/"><li>Maps</li></a>
+              <a href="/programming/golang/pointers/"><li>Pointers</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
