add examples of using jquery

--- a/_layouts/jquery.html
+++ b/_layouts/jquery.html
@@ -8,6 +8,7 @@
         <ul id="tutorials-list">
             <a href="/programming/jquery/"><li>Introduction to jQuery</li></a>
             <a href="/programming/javascript/jquery/setup-jquery/"><li> Setting Up jQuery</li></a>
+            <a href="/programming/jquery/selecting-elements/"><li>Selecting Elements</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
