fix ANOTHER typo...

--- a/_layouts/jquery.html
+++ b/_layouts/jquery.html
@@ -6,7 +6,7 @@
         {%- include wip-alert.html -%}
         <main>{{content}}</main>
         <ul id="tutorials-list">
-            <a href="/programming/jquery/"><li>Introduction to jQuery</li></a>
+            <a href="/programming/javascript/jquery/"><li>Introduction to jQuery</li></a>
             <a href="/programming/javascript/jquery/setup-jquery/"><li> Setting Up jQuery</li></a>
             <a href="/programming/javascript/jquery/selecting-elements/"><li>Selecting Elements</li></a>
         </ul>
