--- a/_layouts/flask.html
+++ b/_layouts/flask.html
@@ -9,6 +9,7 @@
               <a href="/programming/python/flask/"><li>Introduction to Flask</li></a>
               <a href="/programming/python/flask/setup/"><li>Setup</li></a>
               <a href="/programming/python/flask/your-first-flask-website/"><li>Your First Flask Website</li></a>
+              <a href="/programming/python/flask/routing/"><li>Routing</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
