--- a/_layouts/flask.html
+++ b/_layouts/flask.html
@@ -10,6 +10,8 @@
               <a href="/programming/python/flask/setup/"><li>Setup</li></a>
               <a href="/programming/python/flask/your-first-flask-website/"><li>Your First Flask Website</li></a>
               <a href="/programming/python/flask/routing/"><li>Routing</li></a>
+              <a href="/programming/python/flask/templating/"><li>Templating</li></a>
+              <a href="/programming/python/flask/extending-templates/"><li>Extending Templates</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
