--- a/_layouts/javascript.html
+++ b/_layouts/javascript.html
@@ -7,6 +7,7 @@
         <main>{{content}}</main>
         <ul id="tutorials-list">
             <a href="/programming/javascript/"><li>Introduction to JavaScript</li></a>
+            <a href="/programming/javascript/setup-javascript/"><li>Setup JavaScript</li></a>
       </ul>
         {%- include footer.html -%}
     </body>
