--- a/_layouts/bottle.html
+++ b/_layouts/bottle.html
@@ -7,6 +7,7 @@
         <main>{{content}}</main>
         <ul id="tutorials-list">
             <a href="/programming/python/bottle/"><li>Introduction to Bottle</li></a>
+            <a href="/programming/python/bottle/setup/"><li>Setup</li></a>
             <a href="/programming/python/bottle/your-first-bottle-program/"><li>Your First Bottle Program</li></a>
         </ul>
         {%- include footer.html -%}
