--- a/_layouts/html.html
+++ b/_layouts/html.html
@@ -8,6 +8,7 @@
         <ul id="tutorials-list">
               <a href="/programming/html/"><li>Introduction to HTML</li></a>
               <a href="/programming/html/your-first-html-website/"><li>Your First HTML Website</li></a>
+              <a href="/programming/html/headers/"><li>HTML Headers</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
