update html layout with new tutorial

--- a/_layouts/html.html
+++ b/_layouts/html.html
@@ -7,6 +7,7 @@
         <main>{{content}}</main>
         <ul id="tutorials-list">
               <a href="/programming/html/"><li>Introduction to HTML</li></a>
+              <a href="/programming/html/syntax/"><li>HTML Syntax</li></a>
               <a href="/programming/html/your-first-html-website/"><li>Your First HTML Website</li></a>
               <a href="/programming/html/headers/"><li>HTML Headers</li></a>
         </ul>
