--- a/_layouts/html.html
+++ b/_layouts/html.html
@@ -9,7 +9,7 @@
               <a href="/programming/html/"><li>Introduction to HTML</li></a>
               <a href="/programming/html/syntax/"><li>HTML Syntax</li></a>
               <a href="/programming/html/your-first-html-website/"><li>Your First HTML Website</li></a>
-              <a href="/programming/html/head/"><li>HTML Headers</li></a>
+              <a href="/programming/html/headers/"><li>HTML Headers</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
