update js layout

--- a/_layouts/javascript.html
+++ b/_layouts/javascript.html
@@ -8,6 +8,7 @@
         <ul id="tutorials-list">
             <a href="/programming/javascript/"><li>Introduction to JavaScript</li></a>
             <a href="/programming/javascript/setup-javascript/"><li>Setup JavaScript</li></a>
+            <a href="/programming/javascript/console/"><li>JavaScript Console</li></a>
       </ul>
         {%- include footer.html -%}
     </body>
