--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -22,7 +22,7 @@
 		</div>
 	</div>-->
 	<div class="dropdown">
-		<button class="dropbtn"><a href="/math/" style="font-weight:400;">More&#x25BC</a>
+		<button class="dropbtn"><a href="/tutorial-index/" style="font-weight:400;">More&#x25BC</a>
 		</button>
 		<div class="dropdown-content">
 			<a href="/tutorial-index/">Tutorials</a>
