quick edit to nav

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -25,7 +25,8 @@
 		<button class="dropbtn"><a href="/tutorial-index/" style="font-weight:400;">More&#x25BC</a>
 		</button>
 		<div class="dropdown-content">
-			<a href="/tutorial-index/">Tutorials</a>
+			<a href="/tutorial-index/">Tutorial Index</a>
+			<a href="/course-index/">Course Index</a>
 			<a href="/settings/">Settings</a>
 		</div>
 	</div>
