add alerts to layout

--- a/_layouts/javascript.html
+++ b/_layouts/javascript.html
@@ -9,6 +9,7 @@
             <a href="/programming/javascript/"><li>Introduction to JavaScript</li></a>
             <a href="/programming/javascript/setup-javascript/"><li>Setup JavaScript</li></a>
             <a href="/programming/javascript/console/"><li>JavaScript Console</li></a>
+            <a href="/programming/javascript/alerts/"><li>Alerts</li></a>
       </ul>
         {%- include footer.html -%}
     </body>
