add page to layout

--- a/_layouts/jquery.html
+++ b/_layouts/jquery.html
@@ -9,6 +9,7 @@
             <a href="/programming/javascript/jquery/"><li>Introduction to jQuery</li></a>
             <a href="/programming/javascript/jquery/setup-jquery/"><li> Setting Up jQuery</li></a>
             <a href="/programming/javascript/jquery/selecting-elements/"><li>Selecting Elements</li></a>
+            <a href="/programming/javascript/jquery/more-on-selecting/"><li>More On Selecting</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
