--- a/_layouts/python-cool-projects.html
+++ b/_layouts/python-cool-projects.html
@@ -7,6 +7,7 @@
         <main>{{content}}</main>
         <ul id="tutorials-list">
               <a href="/programming/python/cool-projects/"><li>Cool Python projects</li></a>
+              <a href="/programming/python/cool-projects/1-number-guessing/"><li>#1 Number Guessing Game</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
