--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@
   background-color: #5b241c;
   display: flex;
   float: center;
+  position: sticky;
   /*width: 100%;
   position: absolute;
   top: 0px;*/
