update python project layout

--- a/_layouts/python-cool-projects.html
+++ b/_layouts/python-cool-projects.html
@@ -8,6 +8,7 @@
         <ul id="tutorials-list">
               <a href="/programming/python/cool-projects/"><li>Cool Python Projects</li></a>
               <a href="/programming/python/cool-projects/1-number-guessing/"><li>#1 Number Guessing Game</li></a>
+              <a href="/programming/python/cool-projects/2-counter-app/"><li>#2 Counter App</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
