--- a/_layouts/python-cool-projects.html
+++ b/_layouts/python-cool-projects.html
@@ -9,6 +9,7 @@
               <a href="/programming/python/cool-projects/1-number-guessing/"><li>#1 Number Guessing Game</li></a>
               <a href="/programming/python/cool-projects/2-counter-app/"><li>#2 Counter App</li></a>
               <a href="/programming/python/cool-projects/3-simple-autoclicker/"><li>#3 Simple Autoclicker</li></a>
+              <a href="/programming/python/cool-projects/4-simple-web-app/"><li>#4 Simple Web App</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
