--- a/_layouts/python.html
+++ b/_layouts/python.html
@@ -15,6 +15,7 @@
               <a href="/programming/python/comments/"><li>Comments</li></a>
               <a href="/programming/python/arithmetic/"><li>Arithmetic</li></a>
               <a href="/programming/python/functions/"><li>Functions</li></a>
+              <a href="/programming/python/f-strings/"><li>F-Strings</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
