--- a/_layouts/pymongo.html
+++ b/_layouts/pymongo.html
@@ -6,7 +6,7 @@
         {%- include wip-alert.html -%}
         <main>{{content}}</main>
         <ul id="tutorials-list">
-              <a href="/programming/python/pymongo/"><li>Introduction to Pymongo</li></a>
+              <a href="/programming/python/pymongo/"><li>Introduction to PyMongo</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
