--- a/_layouts/pymongo.html
+++ b/_layouts/pymongo.html
@@ -7,6 +7,7 @@
         <main>{{content}}</main>
         <ul id="tutorials-list">
               <a href="/programming/python/pymongo/"><li>Introduction to PyMongo</li></a>
+              <a href="/programming/python/pymongo/setup/"><li>Setup</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
