--- a/_layouts/golang.html
+++ b/_layouts/golang.html
@@ -17,6 +17,7 @@
               <a href="/programming/golang/functions/"><li>Functions</li></a>
               <a href="/programming/golang/if-else/"><li>If/Else</li></a>
               <a href="/programming/golang/switch/"><li>Switch</li></a>
+              <a href="/programming/golang/input/"><li>Input</li></a>
               <a href="/programming/golang/arrays/"><li>Arrays</li></a>
               <a href="/programming/golang/slices/"><li>Slices</li></a>
               <a href="/programming/golang/for-loop/"><li>For Loop</li></a>
