--- a/_layouts/python-cool-projects.html
+++ b/_layouts/python-cool-projects.html
@@ -10,6 +10,7 @@
               <a href="/programming/python/cool-projects/2-counter-app/"><li>#2 Counter App</li></a>
               <a href="/programming/python/cool-projects/3-simple-autoclicker/"><li>#3 Simple Autoclicker</li></a>
               <a href="/programming/python/cool-projects/4-trivia-game/"><li>#4 Trivia Game</li></a>
+              <a href="/programming/python/cool-projects/5-password-generator/"><li>#5 Password Generator</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
