--- a/_layouts/python.html
+++ b/_layouts/python.html
@@ -15,7 +15,7 @@
               <a href="/programming/python/comments/"><li>Comments</li></a>
               <a href="/programming/python/arithmetic/"><li>Arithmetic</li></a>
               <a href="/programming/python/for-loops/"><li>For Loops</li></a>
-              <a href="/programming/python/more-on-printing"><li>More on Printing</li></a>
+              <a href="/programming/python/while-loops/"><li>While Loops</li></a>
               <a href="/programming/python/functions/"><li>Functions</li></a>
               <a href="/programming/python/f-strings/"><li>F-Strings</li></a>
         </ul>
