--- a/_layouts/bottle.html
+++ b/_layouts/bottle.html
@@ -8,7 +8,7 @@
         <ul id="tutorials-list">
             <a href="/programming/python/bottle/"><li>Introduction to Bottle</li></a>
             <a href="/programming/python/bottle/setup/"><li>Setup</li></a>
-            <a href="/programming/python/bottle/your-first-bottle-program/"><li>Your First Bottle Program</li></a>
+            <a href="/programming/python/bottle/your-first-bottle-website/"><li>Your First Bottle Website</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
