--- a/_layouts/discord-py.html
+++ b/_layouts/discord-py.html
@@ -8,7 +8,7 @@
         <ul id="tutorials-list">
             <a href="/programming/python/discord-py/"><li>Introduction to Discord.py</li></a>
             <a href="/programming/python/discord-py/setup/"><li>Setup</li></a>
-            <a href="/programming/python/discord-py/your-first-discord-py-bot/"><li>Your First Discord.py Bot</li></a>
+            <a href="/programming/python/discord-py/sending-and-receiving-messages/"><li>Discord.py Sending and Receiving Messages</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
