--- a/_layouts/algebra.html
+++ b/_layouts/algebra.html
@@ -7,6 +7,7 @@
         <main>{{content}}</main>
         <ul id="tutorials-list">
             <a href="/math/algebra/"><li>Introduction to Algebra</li></a>
+            <a href="/math/algebra/solving-equations/"><li>Solving Equations</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
