--- a/_layouts/bottle.html
+++ b/_layouts/bottle.html
@@ -9,6 +9,8 @@
             <a href="/programming/python/bottle/"><li>Introduction to Bottle</li></a>
             <a href="/programming/python/bottle/setup/"><li>Setup</li></a>
             <a href="/programming/python/bottle/your-first-bottle-website/"><li>Your First Bottle Website</li></a>
+            <a href="/programming/python/bottle/routes/"><li>Routes</li></a>
+            <a href="/programming/python/bottle/templates/"><li>Templates</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
