--- a/_layouts/discord-py.html
+++ b/_layouts/discord-py.html
@@ -10,6 +10,7 @@
             <a href="/programming/python/discord-py/setup/"><li>Setup</li></a>
             <a href="/programming/python/discord-py/sending-and-receiving-messages/"><li>Sending and Receiving Messages</li></a>
             <a href="/programming/python/discord-py/bot-object/"><li>The Bot Object</li></a>
+            <a href="/programming/python/discord-py/embeds/"><li>Embeds</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
