--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -12,23 +12,16 @@
 			<a href="/programming/javascript/">JavaScript</a>
 		</div>
 	</div>
-	<!--<div class="dropdown">
-		<button class="dropbtn"><a href="/math/" style="font-weight:400;">Math&#x25BC</a>
-		</button>
-		<div class="dropdown-content">
-			<a href="#">Link 1</a>
-			<a href="#">Link 2</a>
-			<a href="#">Link 3</a>
-		</div>
-	</div>-->
 	<div class="dropdown">
 		<button class="dropbtn"><a href="/tutorial-index/" style="font-weight:400;">More&#x25BC</a>
 		</button>
 		<div class="dropdown-content">
 			<a href="/tutorial-index/">Tutorial Index</a>
 			<a href="/settings/">Settings</a>
+			<a href="/about/">About</a>
+			<a href="/donating/">Donating</a>
+			<a href="/contributing/">Contributing</a>
 		</div>
 	</div>
-	<!-- <a href="/tutorial-index/" style="font-size: 1.5em;">Tutorials</a> -->
 	<a class="small-nav-open icon" onclick="openSmallNav()">&#9776;</a>
 </div>
