--- a/_layouts/fastapi.html
+++ b/_layouts/fastapi.html
@@ -7,6 +7,7 @@
         <main>{{content}}</main>
         <ul id="tutorials-list">
             <a href="/programming/python/fastapi/"><li>Introduction to FastAPI</li></a>
+            <a href="/programming/python/fastapi/setup/"><li>Setup</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
