--- a/_layouts/fastapi.html
+++ b/_layouts/fastapi.html
@@ -8,6 +8,7 @@
         <ul id="tutorials-list">
             <a href="/programming/python/fastapi/"><li>Introduction to FastAPI</li></a>
             <a href="/programming/python/fastapi/setup/"><li>Setup</li></a>
+            <a href="/programming/python/fastapi/first-api/"><li>Your First FastAPI API</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
