--- a/_layouts/cpp.html
+++ b/_layouts/cpp.html
@@ -7,7 +7,7 @@
         <main>{{content}}</main>
         <ul id="tutorials-list">
             <a href="/programming/cpp/"><li>Introduction to C++</li></a>
-            <a href="/programming/css/setup/"><li>Setup</li></a>
+            <a href="/programming/cpp/setup/"><li>Setup</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
