--- a/_layouts/cpp.html
+++ b/_layouts/cpp.html
@@ -8,6 +8,7 @@
         <ul id="tutorials-list">
             <a href="/programming/cpp/"><li>Introduction to C++</li></a>
             <a href="/programming/cpp/setup/"><li>Setup</li></a>
+            <a href="/programming/cpp/first-program/"><li>Your First C++ Program</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
