--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -13,6 +13,13 @@
 		</div>
 	</div>
 	<div class="dropdown">
+ 		<button class="dropbtn"><a href="/math/" style="font-weight:400;">Math&#x25BC</a>
+ 		</button>
+ 		<div class="dropdown-content">
+			<a href="/math/algebra/">Algebra</a>
+		</div>
+	</div>
+	<div class="dropdown">
 		<button class="dropbtn"><a href="/tutorial-index/" style="font-weight:400;">More&#x25BC</a>
 		</button>
 		<div class="dropdown-content">
