Add comment in navbar

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -29,5 +29,6 @@
 			<a href="/contributing/">Contributing</a>
 		</div>
 	</div>
+	<!-- hamburger menu on smaller screens -->
 	<a class="small-nav-open icon" onclick="openSmallNav()">&#9776;</a>
 </div>
