Update Python layout

--- a/_layouts/python.html
+++ b/_layouts/python.html
@@ -14,9 +14,12 @@
               <a href="/programming/python/data-types/"><li>Data Types</li></a>
               <a href="/programming/python/comments/"><li>Comments</li></a>
               <a href="/programming/python/arithmetic/"><li>Arithmetic</li></a>
+              <a href="/programming/python/lists/"><li>Lists</li></a>
+              <a href="/programming/python/tuples/"><li>Tuples</li></a>
               <a href="/programming/python/for-loops/"><li>For Loops</li></a>
               <a href="/programming/python/while-loops/"><li>While Loops</li></a>
               <a href="/programming/python/functions/"><li>Functions</li></a>
+              <a href="/programming/python/requests/"><li>Requests</li></a>
               <a href="/programming/python/f-strings/"><li>F-Strings</li></a>
         </ul>
         {%- include footer.html -%}
