update python layout

--- a/_layouts/python.html
+++ b/_layouts/python.html
@@ -17,6 +17,7 @@
               <a href="/programming/python/functions/"><li>Functions</li></a>
               <a href="/programming/python/lists/"><li>Lists</li></a>
               <a href="/programming/python/tuples/"><li>Tuples</li></a>
+              <a href="/programming/python/sets/"><li>Sets</li></a>
               <a href="/programming/python/if-else/"><li>If/Else</li></a>
               <a href="/programming/python/for-loops/"><li>For Loops</li></a>
               <a href="/programming/python/while-loops/"><li>While Loops</li></a>
