--- a/_layouts/python-data-alg.html
+++ b/_layouts/python-data-alg.html
@@ -5,7 +5,10 @@
         {%- include nav.html -%}
         <main>{{content}}</main>
         <ul id="tutorials-list">
-              <a href="/programming/python/data-structures/"><li>Introduction to Data Structures And Algorithms In Python</li></a>
+              <a href="/programming/python/data-structures-and-algorithms/"><li>Introduction to Data Structures And Algorithms In Python</li></a>
+              <a href="/programming/python/data-structures-and-algorithms/searching/"><li>Searching</li></a>
+              <a href="/programming/python/data-structures-and-algorithms/linear-search/"><li>Linear Search</li></a>
+              <a href="/programming/python/data-structures-and-algorithms/binary-search/"><li>Binary Search</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
