--- a/_layouts/python-data-alg.html
+++ b/_layouts/python-data-alg.html
@@ -9,6 +9,7 @@
               <a href="/programming/python/data-structures-and-algorithms/searching/"><li>Searching</li></a>
               <a href="/programming/python/data-structures-and-algorithms/linear-search/"><li>Linear Search</li></a>
               <a href="/programming/python/data-structures-and-algorithms/binary-search/"><li>Binary Search</li></a>
+              <a href="/programming/python/data-structures-and-algorithms/sorting/"><li>Sorting</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
